--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gman social</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/11a0e67dea.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav>
@@ -59,11 +60,107 @@
       </div>
 
       <!-- main-content -->
-      <div class="main-content"></div>
+      <div class="main-content">
+
+        <div class="story-gallery">
+          <div class="story story1">
+            <img src="images/upload.png" alt="">
+            <p>Post a story</p>
+          </div>
+
+          <div class="story story2">
+            <img src="images/member-1.png" alt="">
+            <p>Loveth</p>
+          </div>
+
+          <div class="story story3">
+            <img src="images/member-2.png" alt="">
+            <p>Emeka</p>
+          </div>
+          <div class="story story4">
+            <img src="images/member-3.png" alt="">
+            <p>Sylvia</p>
+          </div>
+          <div class="story story5">
+            <img src="images/member-4.png" alt="">
+            <p>Emma</p>
+          </div>
+        </div>
+
+        <div class="write-post-container">
+          <div class="user-profile">
+            <img src="images/profile-pic.png" alt="">
+            <div>
+              <p>John Okoh</p>
+              <small>Public</small>
+            </div>
+          </div>
+
+        </div>
+   
+
+
+
+      </div>
 
       <!-- right-sidebar -->
 
-      <div class="right-sidebar"></div>
+      <div class="right-sidebar">
+        <div class="sidebar-title">
+          <h4>Events</h4>
+          <a href="">See all</a>
+        </div>
+
+        <div class="event">
+          <div class="left-event">
+            <h3>18</h3>
+            <span>March</span>
+          </div>
+          <div class="right-event">
+            <h4>Social Media</h4>
+            <p><i class="fa-solid fa-location-dot"></i>Willson Tech Park</p>
+            <a href="">More info</a>
+          </div>
+        </div>
+        <div class="event">
+            <div class="left-event">
+              <h3>22</h3>
+              <span>June</span>
+            </div>
+            <div class="right-event">
+              <h4>Mobile Marketing</h4>
+              <p><i class="fa-solid fa-location-dot"></i>Willson Tech Park</p>
+              <a href="">More info</a>
+            </div>
+          </div>
+          <div class="sidebar-title">
+            <h4>Advertisment</h4>
+            <a href="">Close</a>
+          </div>
+          <img src="images/advertisement.png" alt="" class="sidebar-ads">
+          <div class="sidebar-title">
+            <h4>Conversation</h4>
+            <a href="">Hide Chat</a>
+          </div>
+          <div class="online-list">
+            <div class="online">
+                <img src="images/member-1.png" alt="">
+            </div>
+            <p>Emmanuella</p>
+          </div>
+          <div class="online-list">
+            <div class="online">
+                <img src="images/member-2.png" alt="">
+            </div>
+            <p>Emmanuel</p>
+          </div>
+          <div class="online-list">
+            <div class="online">
+                <img src="images/member-3.png" alt="">
+            </div>
+            <p>Sylvia</p>
+          </div>
+      </div>
     </div>
   </body>
 </html>
